app/assets/stylesheets/api/stocks.scss
.show-body {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.chart-container {
  display: flex;
  align-items: center;
}


.stock-info-container {
  width: 80%;
  margin-left: 3.5em;
  margin-bottom: 1.5em;
}

/* Navbar */

.stock-show-header {
  position: fixed;
  width: 100%;
  height: 5em;
  z-index: 100;
  background-color: white;
}

.top-nav {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.left-nav {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 55%;
  height: 100%;
}

.stock-searchbar {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 20em;
  height: 100%;
  margin-left: 2em;
}

.searchbar-container {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 20em;
  height: fit-content;
  z-index: 300;
}


.searchbar-input {
  text-transform: uppercase;
  width: 20em;
  height: 2.25em;
}

.searchbar-results {
  display: none;
  flex-direction: column;
  width: 17.15em;
  z-index: 300;
  background-color: white;
  border: 1px solid black;
}

.searchbar-results h2, .searchbar-results li {
  font-size: small;
  padding: 0.5em;
}


.searchbar-results li:hover {
  background-color: lightgreen;
}

.searchbar-input:focus + .searchbar-results {
  display: flex;
}

.searchbar-results:hover {
  display: flex;
}

.searchbar-results-hide {
  display: none;
}


// .search-input {
//   text-transform: uppercase;
//   box-sizing: border-box;
//   outline-style: none;
//   box-shadow:none;
//   border-color: transparent;
//   border: 1px solid rgb(180, 180, 180);
//   border-radius: 0.25em;
//   width: 20em;
//   height: 2.5em;
// }

// .search-input:focus {
//   box-sizing: border-box;
//   outline-style:none;
//   box-shadow:none;
//   border-color:transparent;
//   border: 1px solid rgb(66, 207, 160);
// }

// .go-btn {
//   height: 2em;
//   width: 5em;
//   border-radius: 3em;
//   font-size: medium;
//   font-weight: bold;
//   color: black;
//   margin-left: 1em;
//   background-color: rgb(66, 207, 160);
// }

// .go-btn:hover { 
//   color: black;
//   background-color: rgba(66, 207, 160, 0.747);
// }

.right-nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-right: 1em;
  width: 30%;
}

.right-nav div {
  margin-left: 1.0em;
  margin-right: 1.0em ;
  font-size: large;
  font-weight: bold;
}

.right-nav div:hover:not(#greeting) {
  color:  rgb(66, 207, 160);
  cursor: pointer;
}

.nav-dropdown {
  cursor: pointer;
  position: relative;
}

.nav-dropdown-content {
  display: none;
  position: absolute;
  border-radius: .5em;
  background-color: white;
  right: 1em;
  border: 1px solid lightgrey ;
  color: black;
  z-index: 1;
}

.nav-dropdown-content p {
  padding: 5px;
  margin-bottom: 5px;
}

.nav-dropdown-content p:hover {
  background-color: rgb(236, 241, 243);
}

.nav-dropdown:hover .nav-dropdown-content {
  display: block;
}


/* Navbar end */



/* Dark Mode*/
.show-body-dark {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: black;
     color: white;
}

.show-body-dark button {
    font-size: small;
}

.show-body-dark button:hover {
     color: rgb(66, 207, 160);
}

.show-body-dark span{
    background-color: black;
    color: white;
}

.show-body-dark ul button{
    background-color: black;
    color: white;
}

.show-body-dark .stock-bar span:hover {
  color: black
}

.show-body-dark .selected {
    color: rgb(66, 207, 160);
    text-decoration: underline;
    font-weight: bold;
}

.show-body-dark .nav-dropdown-content {
  display: none;
  position: absolute;
  background-color: black;
  right: 10px;
  border: 1px solid lightgrey ;
  color: white;
  z-index: 1;
}

.show-body-dark .nav-dropdown-content p:hover {
  background-color: rgb(236, 241, 243);
  color: black
}



/* Dark Mode */

/* Stock Bar*/

.stock-bar {
  position: fixed;
  right: 10%;
  top: 6em;
  display: block;
  border-radius: 0.25em;
  width: 18em;
  height: 30em;
  border: 1px solid grey;
  box-shadow: 0 0 10px rgba(128, 128, 128, 0.575);
  overflow-y: auto;
}

.stock-bar::-webkit-scrollbar {
  display: none;
}

.stock-bar-header {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: large;
  font-weight: bold;
  color: black;
  width: 100%;
  height: 3em;
  border-bottom: 1px solid grey;
}

// .stock-bar div {
//   display: flex;
//   flex-direction: column;
//   padding: .5em;
// }

// .stock-bar div span {
//   display: flex;
//   flex-direction: column;
//   justify-content: center;
//   width: 100%;
//   height: 3em;
//   font-size: large;
//   cursor: pointer;
// }

// .stock-bar div span:hover {
//   display: flex;
//   flex-direction: column;
//   justify-content: center;
//   background-color: rgb(236, 241, 243);
// }



/* Stock Bar*/

.stock-show-container {
  width: 100%;
  margin-top: 2em;
  height: 35em;
  display: flex;
}

.stock-show-left {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.stock-show-right {
  width: 40%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.stock-show {
    display: flex;
    flex-direction: column;
    width: 40em;
    height: 28em;
}

.stock-chart-container {
  height: 90%;
}

.stock-show button {
    font-size: small;
}

.stock-show button:hover {
    color: rgb(66, 207, 160);
}


.chart {
    // margin-top: 2em;
    border-top: 1px dotted lightgray;
    margin-left: 3.5em;
    padding-top: 1em;
}

.tooltip {
    margin-bottom: 2em;
}

.selected {
    color: rgb(66, 207, 160);
    text-decoration: underline;
    font-weight: bold;
}

.flux {
    display: flex;
    font-size: small;
}

#fluxPercent {
    margin-left: 5px;
}

.stock-name {
    font-size: xx-large;
    font-weight: normal;
}

#stockPrice {
    font-size: x-large;
}

.stock-show-bar-container {
  border-bottom: 1px solid lightgrey;
  width: 80%;
  height: max-content;
  margin-left: 3.5em;
  padding-bottom: 1em;
  padding-top: 1em;
}

.stock-show-bar {
  display: inline-flex;
  justify-content: space-between;
  width: 60%;
  background-color: white;
}

.stock-show-bar button {
  background-color: white;
}


/************ Buy Sell *******************/

.buy-sell-container {
  margin-top: 0.5em;
  display: flex;
  padding: none;
  width: 100%;

}

.buy-sell-container p {
  width: 50%;
  cursor: pointer;
  padding: 1em;
  font-size: large;
  display: flex;
  justify-content: center;
  align-items: center;
}

.bs-selected {
  color:  rgb(66, 207, 160);
  text-decoration: underline;
  font-weight: bold;
}

#display-none {
  display: none;
}

.buy-sell-info-container {
  display: flex;
  flex-direction: column;
}



.buy-sell-info-container div{
  display: flex;
  justify-content: space-around;
  padding: 0.5em;
}

.buy-sell-info-container p, .buy-sell-info-container button {
  padding: 0.5em
}

.shares-container input[type=number] {
  height: 100%;
  padding: 0.5em;
  width: 5em;
  text-align: right;
}

.transaction-info-container div{
  display: flex;
  padding: 0.5em;
  justify-content: center;
  align-items: center;
  font-size: small;
}

.buy-sell-review-container {
  background-color: rgba(0, 0, 0, 0.151);
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  width: 100%;
  height: 100%;
  top: 0;
}

.bsr-container {
  background-color: white;
  padding: 1em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 25%;
  width: 100%;
  margin-bottom: 8.5em;
}

.bs-review-btn {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.bs-review-btn button {
  width: 5em;
  height: 2em;
  border-radius: 0.25em;
  background-color: rgb(66, 207, 160);
}

.bs-review-btn button:hover {
  background-color: rgb(52, 185, 138);
}

.review-order-btn-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.review-order-btn-container button {
  width: 75%;
  height: 3em;
  border-radius: 0.25em;
  background-color: rgb(66, 207, 160);
}

.buy-sell-img-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.buy-sell-img-container img {
  width: 70%;
  height: 5.5em;
}



.add-remove-wl-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 1em;
}

.buy-sell-bottom {
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.add-remove-wl-container button {
  width: 80%;
  height: 3em;
  border-radius: 0.25em;
  background-color: rgb(66, 207, 160);
}

.add-remove-wl-container button:hover {
  background-color: rgb(52, 185, 138);
}


/****************************************/

/************ Portfolio Item ************/

.portfolio-item-container {
  width: 100%;
  display: flex;
  border-bottom: 1px solid grey;
  padding: 0.5em;
  cursor: pointer;
}

.portfolio-item-container:hover {
  background-color: lightgray;
}

.pi-name-shares {
  display: flex;
  flex-direction: column;
  width: 50%;
}

#pi-stock-name {
  font-size: medium;
  font-weight: bold;
}

#pi-shares-owned {
  font-size: small;
}

.pi-stock-info {
  display: flex;
  flex-direction: column;
  width: 50%;
}

/****************************************/

/************ Company Info **************/

.company-info-container {
  width: 50%;
  margin-left: 5em;
}

.display-none {
  display: none;
}

.company-info-header {
  display: flex;
  justify-content: space-between;
  border-bottom: 2px solid grey;
}

.company-info-header p {
  font-size: x-large;
  padding-bottom: 0.5em;
}

.company-info-header p:last-child {
  display: flex;
  cursor: pointer;
  font-size: small;
  align-items: center;
}

.company-des-container {
  width: 80%;
  padding: 0.5em;
}

.company-des-container p {
  font-size: small;
}

.company-tidbit-container {
  width: 80%;
}

.company-tidbit-row {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.company-tidbit-col {
  display: flex;
  flex-direction: column;
}

.company-tidbit-col p {
  font-size: small;
  padding: .25em;
}


/****************************************/

/****************** News *****************/
.company-news-container {
  width: 50%;
  margin-left: 5em;
  padding-top: 3em;

}

.company-news-header {
  display: flex;
  justify-content: space-between;
  border-bottom: 2px solid grey;
}

.company-news-header p {
  font-size: x-large;
  padding-bottom: 0.5em;
}

.company-news-header p:last-child {
  display: flex;
  font-size: small;
  align-items: center;
  cursor: pointer;
}

.news-container {
 width: 100%;
}

.news-item {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 10em;
  padding: 1em;
}

.news-item:hover {
  background-color: rgba(211, 211, 211, 0.493);
}

.news-item-left {
  display: flex;
  flex-direction: column;
  width: 70%;
}

.news-item-right {
  display: flex;
  width: 25%;
}

#news-datetime {
  width: 100%;
  height: 25%;
  font-size: small;
}

#news-headline {
  width: 100%;
  height: 25%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: small;
  font-weight: bold;
}

#news-sum {
  width: auto;
  height: 50%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: small;
}

.news-item-right img {
  border: 1px solid black;
  width: 100%;
  height: 100%;
  padding: .5em;
}

/*****************************************/

